Fix loading spinner alignment.

--- a/base/css/admin.less
+++ b/base/css/admin.less
@@ -689,6 +689,7 @@
 	}
 }
 
+// Gutenberg compatibility styles
 .gutenberg__editor {
 
 	// WB icon for placeholder.
@@ -720,5 +721,12 @@
 		}
 	}
 
-
+	.so-widget-gutenberg-preview-container {
+		.so-widgets-spinner-container {
+			text-align: center;
+			> span {
+				display: inline-block;
+			}
+		}
+	}
 }
